Changelog - CSS fixes - Logo fixes - Spacing changes

--- a/styles/utilities.scss
+++ b/styles/utilities.scss
@@ -39,6 +39,10 @@
   margin-top: 10rem;
 }
 
+.mt-5 {
+  margin-top: 5rem;
+}
+
 .caption {
   text-align: center;
 }
